--- a/swag-labs/pom.xml
+++ b/swag-labs/pom.xml
@@ -15,6 +15,7 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<default-suite>Smoke.xml</default-suite>
+		<aspectj.version>1.9.9.1</aspectj.version>
 	</properties>
 
 	<build>
